--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ jobs:
           command: |
             version="build-$CIRCLE_BUILD_NUM"
             echo $version
-            docker build -t dev-shreyas/todo-app:$version .
+            docker build -t shreyas02/todo-app:$version .
             echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-            docker push dev-shreyas/todo-app:$version
+            docker push shreyas02/todo-app:$version
 
   Update_manifest:
     docker:
